@@ -81,10 +81,8 @@ if you prefer.
 
 DBM support comes with your Python intrepreter, but CDB support
 currently requires that you first install the
-<a href="http://pilcrow.madison.wi.us/" TARGET="Resource Window">python-cdb</a>
-extension module.  Also see
-<a href="http://mla.libertine.org/tmda-workers/200111/msg00181.html" TARGET="Resource Window">
-this message</a> for more on installing python-cdb.  
+<a href="http://pilcrow.madison.wi.us/#pycdb" TARGET="Resource Window">python-cdb</a>
+extension module.
 <br><br>
 
 The following table shows what the <b>match</b> expression should
