@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Jan  8 13:57:39 2002 -->
+<!-- Fri Jan 11 15:03:51 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -231,10 +231,8 @@ if you prefer.
 
 DBM support comes with your Python intrepreter, but CDB support
 currently requires that you first install the
-<a href="http://pilcrow.madison.wi.us/" TARGET="Resource Window">python-cdb</a>
-extension module.  Also see
-<a href="http://mla.libertine.org/tmda-workers/200111/msg00181.html" TARGET="Resource Window">
-this message</a> for more on installing python-cdb.  
+<a href="http://pilcrow.madison.wi.us/#pycdb" TARGET="Resource Window">python-cdb</a>
+extension module.
 <br><br>
 
 The following table shows what the <b>match</b> expression should
